--- a/loadingScenario/pom.xml
+++ b/loadingScenario/pom.xml
@@ -34,6 +34,12 @@
       <artifactId>spring-context</artifactId>
       <version>5.3.25</version>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>RELEASE</version>
+          <scope>test</scope>
+      </dependency>
 
   </dependencies>
   <build>
