Change parameters in ClassicUniformGenerator

--- a/loadingScenario/src/main/resources/coordinates.properties
+++ b/loadingScenario/src/main/resources/coordinates.properties
@@ -2,7 +2,7 @@ coordX.step=200
 coordX.number=5
 coordX.series=6
 coordX.period=1000
-coordY.aParametr=1.9
-coordY.bParametr=2.7
-coordY.x2Parametr=2.6
-coordY.x3Parametr=2.8
+coordY.c1Parametr=1.9
+coordY.c0Parametr=2.7
+coordY.c2Parametr=2.6
+coordY.c3Parametr=2.8
